--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1198,7 +1198,7 @@
                                         <i class="fas fa-trash"></i>
                                     </button>
                                     <button id="btn-import-excel" class="p-2 bg-green-600 hover:bg-green-700 text-white rounded-lg transition-colors shadow-md ml-2" title="Importar Excel">
-                                        <i class="fas fa-file-excel mr-1"></i> Importar
+                                        <i class="fas fa-file-excel mr-1"></i> Importar itens Excel
                                     </button>
                                 </div>
                                 <!-- Chart Toggle (only for investimento) -->
